--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,28 @@
 .nav,.nav ul{
   display: flex;
   list-style-type: none;
+  
+}
+
+.collection-container{
+  display: flex;
+}
+.artwork-container{
+  width: 100%;
+  max-width: 1280px; 
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+  padding: 0px 58px;
+}
+
+.artwork-card{
+  width: 300px;
+}
+
+.sidebar-container{
+  width: 25%;
+
+  background-color: lightblue;
+  border-right: 1px solid #ccc;
 }
