--- a/src/App.css
+++ b/src/App.css
@@ -2,34 +2,56 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+
 }
 
-.nav,.nav ul{
+.nav,
+.nav ul {
   display: flex;
   list-style-type: none;
-  
+
 }
 
-.collection-container{
+.collection-container {
   display: flex;
 }
-.artwork-container{
+
+.artwork-container {
   width: 100%;
-  max-width: 1280px; 
+  max-width: 1280px;
   display: flex;
   list-style-type: none;
   flex-wrap: wrap;
   padding: 0px 58px;
 }
 
-.artwork-card{
+.artwork-card {
   width: 300px;
 }
 
-.sidebar-container{
+.sidebar-container {
   width: 25%;
-
   background-color: lightblue;
   border-right: 1px solid #ccc;
+}
+
+.artworkDetail-top-section {
+  width: 100%;
+  display: flex;
+}
+
+.artwork-info {
+  width: 30%;
+}
+
+.artwork-img {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.artwork-image img {
+  max-width: 100%;
+  max-height: 100%;
 }
