--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,17 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+.footer{
+  width: 100%;
+  display: flex;
+  font-size: 12px;
+  line-height:0;
+  padding-top: 100px;
+}
+
+.footer-left, .footer-right{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
