--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,13 @@
   max-width: 100%;
   object-fit: contain;
 }
+.artwork-card p{
+  
+  font-size: 15px;
+  margin: 5px;
+
+
+}
 
 .sidebar-container {
   width: 25%;
@@ -182,4 +189,12 @@
 .search-bar button{
 font-size: small;
 
+}
+.search-bar ul{
+  list-style: none;
+  cursor: pointer;
+}
+
+.search-bar ul :hover{
+  color: #535bf2;
 }
